[FIX] mail: remove unnecessary css in chatter
This commit removes the css that was creating two layout issues :
[1] When the chatter was rendered under the form view with the
`isInFormSheetBg` class, it added an unwanted background and border.

[2] When an attachment was uploaded and created a preview (eg. in
approvals), it created an unwanted border.

This commit fixes these issues.

task-3334866
Part of task-3326263

--- a/addons/mail/static/src/attachments/attachment_view.scss
+++ b/addons/mail/static/src/attachments/attachment_view.scss
@@ -4,7 +4,6 @@
         flex: 1 0 auto;
         overflow: hidden;
         width: $o-mail-Chatter-minWidth;
-        border-left: 1px solid map-get($grays, '400');
 
         > .o-mail-Attachment {
             position: relative;
